<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:ebr="http://schemas.android.com/apk/res-auto" >

  
    <item android:id="@+id/set_date"
        ebr:showAsAction="always"
        android:title="@string/set_date"
        ebr:actionLayout="@layout/actionview_set_date" />
    
    <item android:id="@+id/menu_item_today"
        ebr:showAsAction="never"
        android:icon="@android:drawable/ic_menu_day"
        android:title="@string/today" />
    
    <item android:id="@+id/menu_item_share"
        ebr:showAsAction="never"
        android:title="@string/share_all"
        ebr:actionProviderClass="android.support.v7.widget.ShareActionProvider" />

    <item
        android:id="@+id/day_night"
        ebr:showAsAction="never"
        android:icon="@android:drawable/ic_menu_day"
        android:title="@string/day_night"/>
    
    <item
        android:id="@+id/set_confession"
        ebr:showAsAction="never"
        android:title="@string/settings_confession"/>    
    
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        ebr:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/about"
        ebr:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about"/>
    
    <item
        android:id="@+id/feed_back"
        ebr:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/feed_back"/>    
    

</menu>